# lbdb-search

./: .gitignore  LICENSE  README.md  Taskfile.yml  flask_app.py  lbdb.db  pyproject.toml
templates/: search.html
