[project]
name = "lbdb-search"
version = "0.2.0"
description = "LBDB online search"
authors = [{ name = "Steve Scholnick", email = "scholnicks@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["flask (>=3.1.1,<4.0.0)"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false


