[project]
name = "lbdb-search"
version = "0.3.0"
description = "LBDB online search"
authors = [{ name = "Steve Scholnick", email = "scholnicks@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["flask (>=3.1.1,<4.0.0)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false


