[project]
name = "lbdb-search"
version = "0.4.0"
description = "LBDB online search"
authors = [{ name = "Steve Scholnick", email = "scholnicks@gmail.com" }]
requires-python = "==3.13.*"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false


